[workspace]
resolver = "2"

members = [
    "services/bancho",
    "services/gateway",
    "services/db",
    "lib/tools",
    "frame/logs",
    "frame/api",
    "frame/dal",
    "frame/pb",
    "frame/rpc",
    "frame/cfg",
]


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true


[profile.production]
inherits = "release"


[profile.bench]
inherits = "release"
opt-level = 3
