[workspace]
resolver = "2"

members = [
    "bin/bancho",
    "bin/bancho-state",
    "bin/db-cli",
    "bin/gateway",
    "bin/bancho-standalone",
    "bin/chat",
    "bin/geoip",
    "core/db",
    "core/domain",
    "core/pb",
    "core/repositories",
    "core/services",
    "frame/logs",
    "frame/api",
    "frame/rpc",
    "frame/cfg",
    "frame/cfg/derive",
    "lib/tools",
    "lib/tools/derive",
    "lib/bancho-packets",
    "lib/bancho-packets/derive",
]


[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true


[profile.production]
inherits = "release"


[profile.bench]
inherits = "release"
opt-level = 3
