[package]
name = "peace-objects"
version = "0.5.0"
authors = ["PurePeace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pure-peace/peace/peace-objects"

[features]
default = ["with_peace"]
async_trait = ["async-trait"]
osu_file_downloader = ["peace-performance", "bytes", "async-std", "md-5"]
with_peace = [
    "peace-database",
    "tokio-postgres",
    "tokio-pg-mapper",
    "tokio-pg-mapper-derive",
    "postgres-types",
    "field_names",
    "async_trait",
    "async-std",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde_str = "0.1.0"
log = "0.4.14"
json = "0.12.4"
derivative = "2.2.0"
serde = { version = "1.0.123", features = ["derive"] }
reqwest = { version = "0.10.10", features = ["rustls-tls", "json"], default-features = false }
hashbrown = "0.9.1"

tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
tokio-pg-mapper = { version = "0.1.8", optional = true }
tokio-pg-mapper-derive = { version = "0.1.5", optional = true }
postgres-types = { version = "0.1.2", features = ["derive", "with-chrono-0_4", "with-serde_json-1"], optional = true }
field_names = { version = "0.1.1", optional = true }
async-trait = { version = "0.1", optional = true }
async-std = { version = "1.9.0", optional = true }

bytes = { version = "0.5", optional = true }
peace-performance = { git = "https://github.com/Pure-Peace/Peace-performance.git", branch = "main", optional = true }
md-5 = { version = "0.9", optional = true }


peace-constants = { path = "../peace-constants" }
peace-database = { path = "../peace-database", optional = true }
peace-utils = { path = "../peace-utils", features = ["serdes"] }
