[package]
name = "peace-packets"
version = "0.6.1"
authors = ["PurePeace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pure-peace/peace/peace-packets"
description = "Bancho packet reading and writing utility library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
peace-constants = { path = "../peace-constants" }

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "packet_bench"
harness = false
