[package]
name = "peace-settings"
version = "0.3.0"
authors = ["PurePeace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pure-peace/peace/peace-settings"
description = "Some reusable peace settings objects. Logger, bancho config."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
colored = "2.0"
env_logger = "0.8"
log = "0.4"
deadpool-postgres = "0.5"
deadpool-redis = "0.6"
serde = { version = "1.0", features = ["derive"] }
config = "0.10"
dotenv = "0.15.0"
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4", "with-serde_json-1"] }


peace-database = { path = "../peace-database" }
peace-constants = { path = "../peace-constants" }
