[package]
name = "peace-utils"
version = "0.4.1"
authors = ["PurePeace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pure-peace/peace/peace-utils"

[features]
default = ["all"]

all = [
    "bancho",
    "geoip",
    "passwords",
    "serdes",
    "web",
    "actix_web",
    "python3",
    "async_file",
]
with_peace = ["bancho", "geoip", "passwords", "serdes", "web", "actix_web", "python3"]
serdes = ["chrono", "serde"]
passwords = ["lazy_static", "rand", "rust-argon2"]
geoip = ["maxminddb", "memmap", "serde_json", "peace-constants"]
bancho = ["async-std", "bytes", "peace-database", "peace-constants"]
web = ["serde_qs", "hashbrown", "actix-multipart", "futures"]
actix_web = ["actix-web", "async-std"]
python3 = ["pyo3"]
async_file = ["async-std", "md-5"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
colored = "2.0.0"
indicatif = "0.15.0"

# bancho / web
bytes = { version = "0.5.6", optional = true }
async-std = { version = "1.9", optional = true }
# geoip
maxminddb = { version = "0.17", features = ["mmap"], optional = true }
memmap = { version = "0.7", optional = true }
serde_json = { version = "1.0", optional = true }
# password
lazy_static = { version = "1.4", optional = true }
rand = { version = "0.8", optional = true }
rust-argon2 = { version = "0.8", optional = true }
# serde
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
# web
serde_qs = { version = "0.8", optional = true }
hashbrown = { version = "0.9", optional = true }
actix-multipart = { version = "0.3", optional = true }
actix-web = { version = "3.1", optional = true }
futures = { version = "0.3", optional = true }
# python
pyo3 = { version = "0.13.2", features = ["auto-initialize"], optional = true }
# async_file
md-5 = { version = "0.9", optional = true }


peace-database = { path = "../peace-database", optional = true }
peace-constants = { path = "../peace-constants", optional = true }
