[package]
name = "peace_db"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"


[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
sea-orm = { version = "0.11", features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "0.11", features = ["runtime-tokio-rustls"] }
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
clap-serde-derive = "0.2.0"


peace_cfg = { path = "../../frame/cfg" }
