[package]
name = "peace_db"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
sea-orm = { workspace = true, features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls"] }
async-trait = { workspace = true }
paste = { workspace = true }

serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
clap-serde-derive = { workspace = true }


peace_cfg = { workspace = true }
peace_logs = { workspace = true, features = ["cli"] }
