[package]
name = "peace_domain"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"

[features]


[dependencies]
tonic = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
async-trait = { version = "0.1" }
regex = { version = "1.7" }
thiserror = { version = "1.0" }

# password
rust-argon2 = { version = "1.0" }
rand = { version = "0.8" }
once_cell = { version = "1" }


tools = { path = "../../lib/tools" }

peace_pb = { path = "../../core/pb" }
