[package]
name = "peace_domain"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[features]


[dependencies]
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# password
rust-argon2 = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }


tools = { workspace = true }

peace_pb = { workspace = true }
