[package]
name = "peace_pb"
description = "Peace Protocol Buffers (PB)"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }


bitmask-enum = { workspace = true }
thiserror = { workspace = true }

tools = { workspace = true }

peace_rpc_error = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true }
paste = { workspace = true }
