[package]
name = "peace_pb"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

peace_unique_id = { workspace = true }
peace_rpc_error = { workspace = true }


[build-dependencies]
peace_proto_build = { workspace = true }
