[package]
name = "peace_repositories"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
tonic = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }


peace_logs = { path = "../../frame/logs" }
peace_db = { path = "../../core/db" }
peace_domain = { path = "../../core/domain" }


[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
