[package]
name = "peace_services"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"


[dependencies]
tokio = { version = "1" }
tonic = { version = "0.8" }
axum = { version = "0.6" }
hyper = { version = "0.14" }
utoipa = { version = "3.0" }
futures = { version = "0.3" }
chrono = { version = "0.4" }
async-trait = { version = "0.1" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
serde_json = { version = "1.0" }
enum-primitive-derive = { version = "0.2" }
num-traits = { version = "0.2" }
bitmask-enum = { version = "2.1" }
derive_deref = { version = "1.1" }
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }


bancho-packets = { path = "../../lib/bancho-packets" }
tools = { path = "../../lib/tools", features = ["all"] }

peace_api = { path = "../../frame/api" }
peace_logs = { path = "../../frame/logs" }
peace_db = { path = "../../core/db" }
peace_pb = { path = "../../core/pb" }
peace_domain = { path = "../../core/domain" }
peace_repositories = { path = "../../core/repositories" }


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
