[package]
name = "peace_services"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
tokio = { workspace = true, features = ["parking_lot"] }
tonic = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
utoipa = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
enum-primitive-derive = { workspace = true }
num-traits = { workspace = true }
bitmask-enum = { workspace = true }
derive_deref = { workspace = true }
arc-swap = { workspace = true }
memmap2 = { workspace = true }
maxminddb = { workspace = true, features = ["mmap"] }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }


bancho-packets = { path = "../../lib/bancho-packets" }
tools = { path = "../../lib/tools", features = ["all"] }

peace_api = { path = "../../frame/api" }
peace_logs = { path = "../../frame/logs" }
peace_db = { path = "../../core/db" }
peace_pb = { path = "../../core/pb" }
peace_domain = { path = "../../core/domain" }
peace_repositories = { path = "../../core/repositories" }


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
