[package]
name = "peace_services"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []

bancho-mock-test = []


[dependencies]
tokio = { workspace = true, features = ["parking_lot"] }
tonic = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
utoipa = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
enum-primitive-derive = { workspace = true }
num-traits = { workspace = true }
bitmask-enum = { workspace = true }
derive_deref = { workspace = true }
arc-swap = { workspace = true }
memmap2 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap-serde-derive = { workspace = true }
maxminddb = { workspace = true, features = ["mmap"] }
serde = { workspace = true, features = ["derive"] }
ed25519 = { workspace = true }
hex = { workspace = true }

bancho-packets = { workspace = true }
tools = { workspace = true, features = ["all"] }

peace_api = { workspace = true }
peace_logs = { workspace = true }
peace_db = { workspace = true }
peace_pb = { workspace = true }
peace_domain = { workspace = true }
peace_repositories = { workspace = true }
peace_cfg = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
