[package]
name = "peace_api"
description = "Peace api service framework"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"

[features]
default = []
tls = ["axum-server/tls-rustls", "axum/http2"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
futures = "0.3"
axum = { version = "0.6.0", features = ["headers"] }
axum-server = { version = "0.4" }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14" }

# extension
tower = { version = "0.4", features = ["load-shed"] }
tower-http = { version = "0.3", features = ["limit", "trace"] }
tower-layer = "0.3"

# openapi
utoipa = { version = "2.4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# utils
clap = { version = "4.0", features = ["derive"] }
clap-serde-derive = "0.2.0"
once_cell = "1.16"
thiserror = "1.0"
anyhow = "1.0"
axum-client-ip = "0.3.0"


# local crates
peace_logs = { path = "../../frame/logs", features = ["openapi_axum", "cli"] }
peace_cfg = { path = "../../frame/cfg" }
tools = { path = "../../lib/tools", features = ["async_collections"] }
