[package]
name = "peace_api"
description = "Peace api service framework"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"

[features]
default = []
tls = ["axum-server/tls-rustls", "axum/http2"]


[dependencies]
# core
futures = { version = "0.3" }
axum = { version = "0.6", features = ["headers"] }
axum-server = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14" }

# extension
tower = { version = "0.4", features = ["load-shed"] }
tower-http = { version = "0.4", features = ["limit", "trace"] }
tower-layer = { version = "0.3" }

# openapi
utoipa = { version = "3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["axum"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }

# utils
clap = { version = "4.1", features = ["derive"] }
clap-serde-derive = { version = "0.2" }
once_cell = { version = "1" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
axum-client-ip = { version = "0.4" }
derive_deref = { version = "1.1" }

# local crates
peace_logs = { path = "../../frame/logs", features = ["openapi_axum", "cli"] }
peace_cfg = { path = "../../frame/cfg" }

tools = { path = "../../lib/tools", features = ["async_collections"] }
