[package]
name = "peace_api"
description = "Peace api service framework"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[features]
default = []
tls = ["axum-server/tls-rustls", "axum/http2"]


[dependencies]
# core
futures = { workspace = true }
axum = { workspace = true, features = ["headers"] }
axum-server = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true }

# extension
tower = { workspace = true, features = ["load-shed"] }
tower-http = { workspace = true, features = ["limit", "trace"] }
tower-layer = { workspace = true }

# openapi
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# utils
clap = { workspace = true, features = ["derive"] }
clap-serde-derive = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum-client-ip = { workspace = true }
derive_deref = { workspace = true }

# local crates
peace_logs = { path = "../../frame/logs", features = ["openapi_axum", "cli"] }
peace_cfg = { path = "../../frame/cfg" }

tools = { path = "../../lib/tools", features = ["async_collections"] }
