[package]
name = "peace_cfg"
description = "peace framework generic configuration items"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
derive = ["peace_cfg_derive"]

[dependencies]
paste = "1.0"
async-trait = "0.1"
anyhow = "1.0"

# cfg
clap = { version = "4.0", features = ["derive"] }
clap-serde-derive = { version = "0.2.0" }
once_cell = { version = "1.16" }
toml = { version = "0.5" }
sea-orm = { version = "0.11", features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }

peace_cfg_derive = { path = "./derive", optional = true }
peace_logs = { path = "../logs" }
