[package]
name = "peace_cfg"
description = "peace framework generic configuration items"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["derive"]
derive = ["peace_cfg_derive"]

[dependencies]
paste = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true, features = ["tls"] }

# cfg
clap = { workspace = true, features = ["derive"] }
clap-serde-derive = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

peace_cfg_derive = { path = "./derive", optional = true }
peace_logs = { workspace = true }
