[package]
name = "peace_dal"
description = "Peace Data Access Layer (DAL)"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
