[package]
name = "peace_dal"
description = "Peace Data Access Layer (DAL)"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
] }


# serde
serde = { version = "1.0", features = ["derive"] }

# utils
clap = { version = "4.0", features = ["derive"] }
clap-serde-derive = "0.2.0"
async-trait = "0.1"
paste = "1.0"

# local crates
peace_logs = { path = "../../frame/logs", features = ["cli"] }
peace_cfg = { path = "../../frame/cfg" }
