[package]
name = "peace_dal"
description = "Peace Data Access Layer (DAL)"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"

[features]
default = ["cli", "migration"]
migration = ["sea-orm-migration", "tokio"]
cli = ["sea-orm-cli", "clap_3", "dotenvy", "tokio"]


[[bin]]
name = "db-peace-migrate"
path = "src/db/peace/migration/migrate.rs"
required-features = ["migration"]

[[bin]]
name = "db-cli"
path = "src/cli.rs"
required-features = ["cli"]


[dependencies]
sea-orm = { version = "0.11", features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
] }


# serde
serde = { version = "1.0", features = ["derive"] }

# utils
clap_4 = { package = "clap", version = "4.0", features = ["derive"] }
clap-serde-derive = "0.2.0"
async-trait = "0.1"
paste = "1.0"

# optional
tokio = { version = "1", features = ["rt", "macros"], optional = true }
sea-orm-migration = { version = "0.11", optional = true, features = [
    "runtime-tokio-rustls",
] }
sea-orm-cli = { version = "0.11", optional = true, default-features = false, features = [
    "codegen",
    "cli",
    "runtime-tokio-rustls",
] }
clap_3 = { package = "clap", version = "^3.2", optional = true }
dotenvy = { version = "^0.15", optional = true }


# local crates
peace_logs = { path = "../../frame/logs", features = ["cli"] }
peace_cfg = { path = "../../frame/cfg" }
