[package]
name = "peace_db"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"

[features]
default = ["db_peace_migration", "db_peace_cli"]
db_peace_migration = ["sea-orm-migration", "tokio"]
db_peace_cli = ["dotenvy", "tokio", "db_peace"]
db_peace = []


[[bin]]
name = "db-peace-migrate"
path = "src/peace/migration/migrate.rs"
required-features = ["db_peace_migration"]


[[bin]]
name = "db-peace-cli"
path = "src/peace/cli.rs"
required-features = ["db_peace_cli"]


[dependencies]
sea-orm = { version = "0.11", features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
] }


# serde
serde = { version = "1.0", features = ["derive"] }

# utils
clap = { version = "4.0", features = ["derive"] }
clap-serde-derive = "0.2.0"
async-trait = "0.1"
paste = "1.0"

# optional
tokio = { version = "1", features = ["rt", "macros"], optional = true }
sea-orm-migration = { version = "0.11", optional = true, features = [
    "runtime-tokio-rustls",
] }
dotenvy = { version = "^0.15", optional = true }

peace_dal = { path = "../../frame/dal" }
peace_domain = { path = "../../frame/domain", features = ["domain_peace"] }
