[package]
name = "peace_logs"
description = "Peace logging framework"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"


[features]
default = []
openapi_axum = ["api_axum", "utoipa/axum_extras", "utoipa-swagger-ui/axum"]
api_axum = ["axum", "serde_json", "tower-http"]
grpc = ["tonic", "peace_pb"]
cli = ["clap", "clap-serde-derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.16"
serde = { version = "1.0", features = ["derive"] }

# grpc optional
tonic = { version = "0.8", optional = true }
peace_pb = { path = "../../core/pb", optional = true, features = ["logs"] }

# axum optional
axum = { version = "0.6.0", optional = true }
serde_json = { version = "1.0", optional = true }
tower-http = { version = "0.3", features = ["auth"], optional = true }

# cli optional
clap = { version = "4.0", features = ["derive"], optional = true }
clap-serde-derive = { version = "0.2.0", optional = true }


# openapi optional
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
