[package]
name = "peace_logs"
description = "Peace logging framework"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"


[features]
default = []
openapi_axum = ["api_axum", "utoipa/axum_extras", "utoipa-swagger-ui/axum"]
api_axum = ["axum", "serde_json", "tower-http"]
grpc = ["tonic", "peace_pb"]
cli = ["clap", "clap-serde-derive"]


[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = { version = "1" }
serde = { version = "1.0", features = ["derive"] }

# grpc optional
tonic = { version = "0.8", optional = true }
peace_pb = { path = "../../core/pb", optional = true }

# axum optional
axum = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
tower-http = { version = "0.4", features = ["auth"], optional = true }

# cli optional
clap = { version = "4.1", features = ["derive"], optional = true }
clap-serde-derive = { version = "0.2", optional = true }


# openapi optional
utoipa = { version = "3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["axum"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
