[package]
name = "peace_logs"
description = "Peace logging framework"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[features]
default = []
openapi_axum = ["api_axum", "utoipa/axum_extras", "utoipa-swagger-ui/axum"]
api_axum = ["axum", "serde_json", "tower-http"]
grpc = ["tonic", "peace_pb"]
cli = ["clap", "clap-serde-derive"]


[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# grpc optional
tonic = { workspace = true, optional = true }
peace_pb = { workspace = true, optional = true }

# axum optional
axum = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["auth"], optional = true }

# cli optional
clap = { workspace = true, features = ["derive"], optional = true }
clap-serde-derive = { workspace = true, optional = true }


# openapi optional
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
